# qiwa-automation

./: .env.demo  .env.local.example  .env.stage  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  README.md  config.py  conftest.py  pyproject.toml  pytest.ini  report.xml
allure-results/: 0191112e-328b-43b1-95c9-a887d35e6e99-container.json  024018e6-e993-460f-b03e-b564d7c27198-attachment.json  0262a973-49d9-46a9-b53f-ee18dc09e90e-container.json  02fcb889-f443-44f6-89c9-b3db5a65851d-container.json  03fbcaa6-7a8f-494a-8c21-7d534f000f6e-container.json  040bd530-4c89-4524-bd86-b521b2a8fb3a-attachment.json  04fab317-47dd-4dab-9231-317ba34e3e2c-attachment.json  05a3ffcf-7a62-4305-b3c9-918e1502083b-result.json  06c6ee94-e622-4082-99c1-db8d373db18d-attachment.json  06f655a6-3b76-4f12-811b-adb15a6ff818-container.json  07127a8e-5a37-414c-a412-b9ea4cec19ca-result.json  07d22389-bc6f-4822-9b7d-1ab0e865f40a-attachment.json  07e72ff3-4a71-4083-b221-07163d40fb1f-container.json  083bbfc2-229c-4a82-8e0e-cbc8502cf070-attachment.json  086731c8-cb78-41d5-abd5-1e50d3367d62-attachment.json  087d11d9-907d-4596-b694-25bc52893a5e-attachment.json  0aa1aa88-f53b-499c-8c0a-4e384f7af513-container.json  0b677355-9052-45bf-95e5-4b545ed3dfb7-attachment.json  0ba5f847-20ca-43c9-9b82-e976aced2c38-attachment.json  0c66de7e-6ef2-4499-95c9-50fab0464ba9-attachment.json  0c6a401d-fd04-4355-a09e-70646f75401f-result.json  0cd3b5d8-8754-4c5b-82fa-4310c036f1ab-attachment.json  0db8920b-e30f-4591-babb-8ea52314ff9d-attachment.json  0e66f738-125b-4de5-9bc2-1d5fca203b93-container.json  0f3c8867-df2a-4253-9ebd-978aa61d00a1-result.json  0faf8d4b-e867-4c6d-a538-d322ba9aaba8-result.json  11ac7291-864b-4a62-b4ae-a30a9cea2204-attachment.json  11f7af99-f42d-4c49-8a0c-8194a4894764-attachment.json  12dd9f39-1942-4463-9648-71c358bc238a-result.json  13350a47-eed3-408e-81bd-8d63def6ccc1-result.json  1337b30e-e999-4125-abab-97e6cb71cdab-result.json  138c0e54-6b32-42d4-bb91-4b9e2048870e-container.json  1493d3c1-9f0f-421f-856e-e9e9ba669f07-attachment.json  (+291 more)
(+854 files in other folders)
