[tool.poetry]
name = "qiwa-automation"
version = "0.1.0"
description = "autotests for Qiwa project"
authors = [
    "Rostyslav Stryzhak <rostyslav.stryzhak@cd.p2h.com>",
    "Kyrylo Horilyi <kyrylo.horilyi@cd.p2h.com>",
    "Dmytro Popovskyi <dmytro.popovskyi@p2h.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pyyaml = "^6.0"
requests = "^2.28.2"
allure-pytest = "^2.13.1"
selene = "2.0.0rc4"
pytest = "^7.2.2"
cerberus = "^1.3.4"
pytest-rerunfailures = "^11.1.2"
pyjwt = "^2.6.0"
discord = "^2.2.2"
discord-py = "^2.2.2"
pydantic = "^1.10.6"
aiohttp = "^3.8.4"
pycryptodome = "^3.17"
locust = "^2.15.1"
SQLAlchemy="^1.4.39"
psycopg2-binary="^2.9.3"
pymssql="2.2.8"
bcrypt="^4.0.1"
pkce="^1.0.3"
jmespath = "^1.0.0"
openpyxl = "3.1.2"
python-dateutil = "^2.8.2"
pytest-check = "2.1.5"
PyPDF2 = "3.0.1"
deepdiff = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.5.1"
deptry = "^0.12.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "stage",
    "demo"
]

[tool.black]
line-length = 99
target-version = ['py310']
extend-exclude = 'test_(.)*\.py'

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pylint.master]
ignore-patterns = 'test_(.)*\.py,conftest.py'
disable = [
    'missing-docstring',
    'too-many-public-methods',
    'fixme',
    'too-many-locals'
]
extension-pkg-whitelist = 'pydantic'

[tool.pylint.format]
# Length differ from Black's configuration
# due to the presence of long strings and docstrings which Black does not format
max-line-length = 120

[tool.pylint.basic]
good-names = ['e', 'i']

[tool.pylint.design]
max-args = 20
min-public-methods = 1
max-attributes = 20

[tool.deptry.package_module_name_map]
allure-pytest = "allure"
